Restructure project to be clearer
- Simplified cli.mjs. Moved generation method to new file in src
- Moved core logic to lib folder
- Added test folder for sample spec(s) to be used in test. Added a test command for simplicity
- Added validation method to pre-empt issues
- Update package.json and lock file

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "scripts": {
     "lint": "eslint ./src/**/*.mjs",
-    "lint-fix": "eslint --fix ./src/**/*.mjs"
+    "lint-fix": "eslint --fix ./src/**/*.mjs",
+    "test": "node ./bin/cli.mjs --spec ./test/openapi-3.1.json --out ./test/bin/output.pdf"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
