--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "html-to-pdfmake": "^2.3.4",
     "jsdom": "^17.0.0",
-    "marked": "^3.0.4",
+    "marked": "^12.0.2",
     "pdfmake": "^0.2.2",
     "swagger-client": "^3.16.1",
     "swagger2openapi": "^7.0.8",
@@ -52,8 +52,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
-    "prettier": "^2.4.1",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1"
   },
   "engines": {
     "node": ">= 14.17.5",
