--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "openapi2pdf": "bin/cli.mjs"
   },
   "dependencies": {
+    "@actions/core": "^1.10.1",
     "html-to-pdfmake": "^2.3.4",
     "jsdom": "^17.0.0",
     "marked": "^12.0.2",
